--- a/SiSiMEX/imgui.ini
+++ b/SiSiMEX/imgui.ini
@@ -4,7 +4,7 @@ Size=547,548
 Collapsed=0
 
 [Window][Main menu]
-Pos=5,6
+Pos=4,5
 Size=222,548
 Collapsed=0
 
@@ -26,5 +26,15 @@ Collapsed=0
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
+
+[Window][Nodes/Items Matrix]
+Pos=121,305
+Size=192,163
+Collapsed=0
+
+[Window][ImGui Demo]
+Pos=235,481
+Size=550,680
 Collapsed=0
 
